# OpenFold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SETUP.md  deploy.sh  docker-compose.yml  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
api/: __init__.py  config.py  main.py
api/routers/: __init__.py  agents.py  datasets.py  models.py  prediction.py
api/services/: __init__.py  prediction_service.py
core/: __init__.py
core/agents/: __init__.py  structure_agent.py
core/data/: __init__.py  loaders.py  processor.py  validators.py
core/utils/: __init__.py  metrics.py
data/preprocessing/: processor.py
tests/: __init__.py  test_api.py  test_core.py
